@@ -1,12 +1,11 @@
-# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
+# Run Travis CI for R via Docker
 #
-# Adapted for Docker use via a custom container built for this repo
-
-language: cpp
+# Made by Dirk Eddelbuettel in August 2018 and released under GPL (>=2)
 
 os: linux
 dist: trusty
 sudo: required
+language: cpp
 compiler: gcc
 services: docker
 
@@ -17,16 +16,10 @@ env:
       R_BLD_CHK_OPTS="--no-build-vignettes --no-manual"
       
 before_install:
-#   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-#   # add our launchpad repo which has (inter alia) the newest QuantLib
-#   - sudo add-apt-repository -y ppa:edd/misc
-#   - ./run.sh bootstrap
-#
  - docker pull ${DOCKER_CNTR}
+ - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} r -p -e 'sessionInfo()'
  
 install:
-#   - ./run.sh install_aptget r-cran-rcpp libquantlib0-dev r-cran-runit r-cran-rgl r-cran-zoo libboost-dev libboost-test-dev littler r-cran-shiny
-#
  # R packages need special treatment with ccache: temp dirs, new timestamps
  - echo max_size = 5.0G > ~/.ccache/ccache.conf
  - echo sloppiness = include_file_ctime >> ~/.ccache/ccache.conf 
@@ -36,9 +29,6 @@ install:
  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} R CMD INSTALL RQuantLib_*.tar.gz
 
 script:
-#   #- ./run.sh run_tests
-#   - travis_wait 20 ./run.sh run_tests
-#
  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} R CMD check ${R_BLD_CHK_OPTS} RQuantLib_*.tar.gz
 
 after_failure:
